--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.22",
     "gsap": "^3.13.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.544.0",
     "next": "14.2.14",
